vendor method for webos apps

--- a/spec/fixtures/webos_appinfo_spec.json
+++ b/spec/fixtures/webos_appinfo_spec.json
@@ -1,7 +1,7 @@
 {
 	"id": "com.whoever.awesome.app",
 	"version": "1.0.0",
-	"vendor": "Nitobi",
+	"vendor": "Bruce Lee",
 	"type": "web",
 	"main": "index.html",
 	"title": "Awesome App",
