fixing specs and bumping version

--- a/spec/fixtures/ios/ios_info_expected.plist
+++ b/spec/fixtures/ios/ios_info_expected.plist
@@ -45,6 +45,6 @@
     <key>NSMainNibFile</key>
     <string></string>
     <key>NSMainNibFile~ipad</key>
-    <string>-iPad</string>
+    <string></string>
 </dict>
 </plist>
