--- a/spec/fixtures/symbian/symbian_wrt_info_expected.plist
+++ b/spec/fixtures/symbian/symbian_wrt_info_expected.plist
@@ -12,6 +12,8 @@
   <string>index.html</string>
   <key>MiniViewEnabled</key>
   <false/>
-  </dict>
+  <key>AllowNetworkAccess<key/>
+  <true/>
+</dict>
 </plist>
 
