[webos] make uiRevision configurable
need to update mustache soon -- too many whitespace issues

--- a/spec/fixtures/webos/appinfo_expected.json
+++ b/spec/fixtures/webos/appinfo_expected.json
@@ -5,6 +5,6 @@
 	"type": "web",
 	"main": "index.html",
 	"title": "Confetti Sample App",
-	"uiRevision": "2",
-	"icon": "icon.png"
+	"icon": "icon.png",
+	"uiRevision": "2"
 }
