[ios] add support for custom url_schemes

--- a/spec/fixtures/ios/ios_info_expected.plist
+++ b/spec/fixtures/ios/ios_info_expected.plist
@@ -46,5 +46,7 @@
     <string></string>
     <key>NSMainNibFile~ipad</key>
     <string></string>
+    <key>CFBundleURLTypes</key>
+    <array></array>
     </dict>
 </plist>
