--- a/spec/fixtures/ios/ios_info_spec_expected_orientation.plist
+++ b/spec/fixtures/ios/ios_info_spec_expected_orientation.plist
@@ -42,5 +42,7 @@
     <true/>
     <key>NSMainNibFile</key>
     <string></string>
+    <key>CFBundleURLTypes</key>
+    <array></array>
     </dict>
 </plist>
