--- a/spec/fixtures/ios/ios_info_spec_expected_schemes.plist
+++ b/spec/fixtures/ios/ios_info_spec_expected_schemes.plist
@@ -4,49 +4,55 @@
 <dict>
     <key>CFBundleIconFiles</key>
     <array>
-        <string>icon.png</string>
+        <string>img/beer_72.png</string>
+        <string>img/beer_48.png</string>
+        <string>img/beer_36.png</string>
         </array>
     <key>UISupportedInterfaceOrientations~ipad</key>
     <array>
-        <string>UIInterfaceOrientationPortrait</string>
-        <string>UIInterfaceOrientationPortraitUpsideDown</string>
         <string>UIInterfaceOrientationLandscapeLeft</string>
         <string>UIInterfaceOrientationLandscapeRight</string>
         </array>
     <key>UISupportedInterfaceOrientations</key>
     <array>
-        <string>UIInterfaceOrientationPortrait</string>
-        <string>UIInterfaceOrientationPortraitUpsideDown</string>
         <string>UIInterfaceOrientationLandscapeLeft</string>
         <string>UIInterfaceOrientationLandscapeRight</string>
         </array>
     <key>CFBundleDevelopmentRegion</key>
     <string>English</string>
     <key>CFBundleDisplayName</key>
-    <string>Awesome App</string>
+    <string>John Garrett Drinking Game</string>
     <key>CFBundleExecutable</key>
     <string>${EXECUTABLE_NAME}</string>
     <key>CFBundleIconFile</key>
     <string>icon.png</string>
     <key>CFBundleIdentifier</key>
-    <string>com.whoever.awesome.app</string>
+    <string>com.nitobi.johngarrett</string>
     <key>CFBundleInfoDictionaryVersion</key>
     <string>6.0</string>
     <key>CFBundleName</key>
-    <string>Awesome App</string>
+    <string>John Garrett Drinking Game</string>
     <key>CFBundlePackageType</key>
     <string>APPL</string>
     <key>CFBundleSignature</key>
     <string>????</string>
     <key>CFBundleVersion</key>
-    <string>1.0.0</string>
+    <string>1.0</string>
     <key>LSRequiresIPhoneOS</key>
     <true/>
     <key>NSMainNibFile</key>
     <string></string>
-    <key>NSMainNibFile~ipad</key>
-    <string></string>
     <key>CFBundleURLTypes</key>
-    <array></array>
+    <array><dict>
+      <key>CFBundleTypeRole</key>
+      <string>Shell</string>
+      <key>CFBundleURLName</key>
+      <string>com.phonegap.test</string>
+      <key>CFBundleURLSchemes</key>
+      <array>
+        <string>pgb</string>
+        </array>
+      </dict>
+      </array>
     </dict>
 </plist>
